# watch-together

./: .air.toml  .gitignore  Cargo.toml  Dockerfile  README.md  bun.lockb  go.mod  go.sum  main.go  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts
.github/workflows/: docker-image.yml
client/: client.js  client.ts  input.css  output.css
src/: main.rs
src/views/: header.hbs  index.hbs  login.hbs  video.hbs
utils/: aws.go  handlebars.go
views/: index.hbs
views/partials/: header.hbs  login.hbs  loginError.hbs  logout.hbs  sidebar.hbs  video.hbs
